--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
     <body>
         <div id="game-container">
         	<!--<button type="button" onClick="Game.restartLevel();" id="button">Restart Level</button> -->
-	        <div id="canvas-container">
-	            <canvas id="stage" width="370" height="500">
-	            </canvas>
-	        </div>
+	        <canvas id="stage" width="370" height="500"></canvas>
+	 
         </div>
 
         <footer>
@@ -35,8 +33,8 @@
         <script src="js/levels.js"></script>
         <script src="js/gui.js"></script>
         <script src="js/input.js"></script>
-        <script src="js/Tile.js"></script>
-        <!--<script src="js/Lights.js"></script> -->
+        <script src="js/Wire.js"></script>
+        <script src="js/Light.js"></script>
         
       
     </body>
