--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <script src="js/input.js"></script>
         <script src="js/Wire.js"></script>
         <script src="js/Light.js"></script>
+        <script src="js/Electric.js"></script>
         
       
     </body>
