--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <script src="js/Wire.js"></script>
         <script src="js/Light.js"></script>
         <script src="js/Electric.js"></script>
+        <script src="js/Cat.js"></script>
+        <script src="js/Timer.js"></script>
+        <script src="js/SoundButton.js"></script>
         
       
     </body>
